APEX-265: Fixed the spacing issue.

--- a/source/themes/custom/apextoolgroup/styles/components/_footer.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_footer.scss
@@ -59,7 +59,7 @@ footer {
   }
 
   .view-footer-social-block {
-    @media only screen and (min-width: $tablet)  {
+    @media only screen and (max-width: $tablet)  {
       margin: 20px 0 30px;
     }
 
