--- a/source/themes/custom/apextoolgroup/styles/components/_header.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_header.scss
@@ -1,4 +1,9 @@
 /****** Header ******/
+.toolbar-menu {
+  li {
+    font-size: unset;
+  }
+}
 
 .header {
   position: relative;
